added map-reduce example

--- a/test_examples.ipynb
+++ b/test_examples.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check if pandas is installed\n",
+    "# clean up RAM experiments\n",
     "# unittest with a mapper/reducer?"
    ]
   },
@@ -48,7 +50,7 @@
     "\n",
     "__MCE arguments__:  This must be a dictionary which has keyword arguments you pass into the MCE instance. It must has the following arguments (which everything you see in the example):  \n",
     "* cluster_job_name: what ever you like to name the cluster job. This will help create the final output directory, so use a string that doesn't have any weird characters or spaces. \n",
-    "* n_cpus_list: number of CPUs for each cluster. Largest cluster in the beginning; for example: [5, 2, 2]\n",
+    "* n_cpus_list: number of CPUs for each cluster. Largest cluster in the beginning; for example: [5, 2, 2]. You should rarely make a cluster with 1 CPU because then it would defeat the purpose of multi-CPU map-reduce.\n",
     "* ram_limit_in_GB: threshold for total RAM usage across all clusters. If clusters use more RAM, then it will automatically kill the cluster that uses the most RAM.   \n",
     "* wait_time_in_seconds: the number of seconds between profiling RAM and determining whether if any cluster is available to send the next file. I just use 1 second, so it profiles every second. \n",
     "* input_file_names: a list of file names. Absolute paths are preferred as relative path not guaranteed to work. \n",
@@ -101,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UDF Example 1"
+    "## UDF Example 0"
    ]
   },
   {
@@ -225,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UDF Example 2"
+    "## UDF Example 1"
    ]
   },
   {
@@ -262,7 +264,7 @@
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': error_func1,\n",
-    "    'function_kwargs_dict': {} # error_func1 takes no additional arguments    \n",
+    "    'function_kwargs_dict': {} # error_func1() takes no additional arguments    \n",
     "    }\n",
     "\n",
     "mce1 = MultipleClusterEngine(**mce_args)\n",
@@ -321,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UDF Example 3"
+    "## UDF Example 2"
    ]
   },
   {
@@ -358,7 +360,7 @@
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': error_func2,\n",
-    "    'function_kwargs_dict': {} # error_func2 takes no additional arguments    \n",
+    "    'function_kwargs_dict': {} # error_func2() takes no additional arguments    \n",
     "    }\n",
     "\n",
     "mce2 = MultipleClusterEngine(**mce_args)\n",
@@ -417,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UDF Example 4"
+    "## UDF Example 3"
    ]
   },
   {
@@ -463,7 +465,7 @@
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': exceed_memory_limit,\n",
-    "    'function_kwargs_dict': {} # exceed_memory_limit takes no additional arguments    \n",
+    "    'function_kwargs_dict': {} # exceed_memory_limit() takes no additional arguments    \n",
     "    }\n",
     "\n",
     "mce3 = MultipleClusterEngine(**mce_args)\n",
@@ -526,6 +528,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## UDF Example 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -583,7 +594,7 @@
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': exceed_memory_limit_all,\n",
-    "    'function_kwargs_dict': {} # exceed_memory_limit takes no additional arguments    \n",
+    "    'function_kwargs_dict': {} # exceed_memory_limit_all() takes no additional arguments    \n",
     "    }\n",
     "\n",
     "mce4 = MultipleClusterEngine(**mce_args)\n",
@@ -624,6 +635,237 @@
     "\n",
     "__```mce4.async_results_dict```__: Since none of the files were processed, they were all removed from the dictionary values. Whenever a cluster hits RAM limit and is prematurely killed, the cluster is removed from the defaultdict (ie its cluster number will be popped from defaultdict). Hence, this defaultdict dict is completely empty without any keys. The drawback is suppose if cluster 4 processed 5 files correctly and then hits a memory limit on the 6th file, then all 6 files history in ```mce4.async_results_dict``` will be deleted (```mce4.async_results_dict.pop(4)``` will be called when cluster killed prematurely)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UDF Example 5: Actual Map-Reduce Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 27.6 s, sys: 200 ms, total: 27.8 s\n",
+      "Wall time: 27.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# create some fake data\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "!mkdir fake_data\n",
+    "\n",
+    "for i in range(10):\n",
+    "    userID = np.random.randint(1000, size=1000000)\n",
+    "    invoice_payment = np.random.randint(100000, size=1000000)\n",
+    "\n",
+    "    df = pd.DataFrame({'userID': userID, 'invoice_payment': invoice_payment})\n",
+    "    df.to_csv('fake_data/{}.tmp'.format(i), index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_invoice_total(\n",
+    "    # mandatory args, you can choose not to use them but function has to take them in\n",
+    "     input_file_name, cluster_output_dir, cluster_id, n_cpus, cpu_id  \n",
+    "):\n",
+    "    import os # function has to import all the libraries it uses\n",
+    "    from collections import defaultdict\n",
+    "    import gc\n",
+    "    import pandas as pd\n",
+    "    \n",
+    "    def mapper(input_file_name, n_cpus, cpu_id):\n",
+    "        data_dict = defaultdict(list)\n",
+    "        with open(input_file_name, 'r') as in_:\n",
+    "            for line in in_:\n",
+    "                line = line.strip().split(',')\n",
+    "                userID, invoice_payment = int(line[0]), int(line[1])\n",
+    "                if hash(userID) % n_cpus == cpu_id:\n",
+    "                    data_dict[userID].append(invoice_payment)\n",
+    "        return data_dict\n",
+    "    \n",
+    "    def reducer(data_dict, cluster_output_dir, cluster_id, cpu_id):\n",
+    "        results_dict = {}\n",
+    "        for userID in sorted(data_dict):\n",
+    "            data = data_dict.pop(userID) # reduces data_dict size\n",
+    "            results_dict[userID] = [pd.DataFrame(data).sum()[0]] # only create a DataFrame for 1 userID at a time\n",
+    "            \n",
+    "        output_file_name = '_'.join(['cluster' + str(cluster_id), \n",
+    "             'cpu' + str(cpu_id), input_file_name.split('/')[-1]])\n",
+    "        output_file_name = os.path.join(cluster_output_dir, output_file_name)\n",
+    "        pd.DataFrame(results_dict).T.to_csv(output_file_name, header=False)\n",
+    "\n",
+    "    \n",
+    "    data_dict = mapper(input_file_name, n_cpus, cpu_id)\n",
+    "    gc.collect() # garbage collector might reduce RAM usage; quick to run\n",
+    "    reducer(data_dict, cluster_output_dir, cluster_id, cpu_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [01:22<00:00,  8.23s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 533 ms, sys: 64.5 ms, total: 598 ms\n",
+      "Wall time: 2min 37s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "from glob import glob\n",
+    "\n",
+    "\n",
+    "input_file_names = glob('fake_data/*')\n",
+    "mce_args = {\n",
+    "    'cluster_job_name': 'get_user_invoice_total_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 1,\n",
+    "    'input_file_names': input_file_names,\n",
+    "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
+    "    'function_to_process': user_invoice_total,\n",
+    "    'function_kwargs_dict': {} # user_invoice_total() takes no additional arguments    \n",
+    "    }\n",
+    "\n",
+    "mce5 = MultipleClusterEngine(**mce_args)\n",
+    "mce5.main() # I'm expecting an Exception here due to killing all clusters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How I Debug my UDF when there is an error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 24.2 s, sys: 760 ms, total: 24.9 s\n",
+      "Wall time: 23.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Basically, I put print statements in my UDF until the function seems to work.\n",
+    "# You can also have the UDF print how long the mapping and reducing steps took to see if \n",
+    "# you are IO constrained by the mapper, or CPU constrained by the reducer.\n",
+    "\n",
+    "!mkdir test_output\n",
+    "user_invoice_total(**{\n",
+    "    'input_file_name': 'fake_data/0.tmp',\n",
+    "    'cluster_output_dir': '/home/ubuntu/multiple-cluster-engine-in-python3/test_output',\n",
+    "    'cluster_id': 2,\n",
+    "    'n_cpus': 2,\n",
+    "    'cpu_id': 0,\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check if the resulting output files are correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCE results match manual extraction for file: 0.tmp: True\n",
+      "MCE results match manual extraction for file: 1.tmp: True\n",
+      "MCE results match manual extraction for file: 2.tmp: True\n",
+      "MCE results match manual extraction for file: 3.tmp: True\n",
+      "MCE results match manual extraction for file: 4.tmp: True\n",
+      "MCE results match manual extraction for file: 5.tmp: True\n",
+      "MCE results match manual extraction for file: 6.tmp: True\n",
+      "MCE results match manual extraction for file: 7.tmp: True\n",
+      "MCE results match manual extraction for file: 8.tmp: True\n",
+      "MCE results match manual extraction for file: 9.tmp: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    original_data = pd.read_csv('fake_data/{}.tmp'.format(i), header=None)\n",
+    "\n",
+    "    original_data_manually_processed = pd.read_csv('fake_data/{}.tmp'.format(i), header=None)\n",
+    "    original_data_manually_processed = original_data.groupby(0)[1].sum()\n",
+    "    original_data_manually_processed = original_data_manually_processed.sort_index().reset_index()\n",
+    "\n",
+    "    mce_processed_data = []\n",
+    "    for file_ in glob('/home/ubuntu/cluster_results/get_user_invoice_total_1/*{}.tmp'.format(i)):\n",
+    "        mce_processed_data.append(pd.read_csv(file_, header=None))\n",
+    "\n",
+    "    mce_processed_data = pd.concat(mce_processed_data)\n",
+    "    mce_processed_data.sort_values(0, inplace=True)\n",
+    "    mce_processed_data.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "    print('MCE results match manual extraction for file: {}.tmp: {}'.format(i,\n",
+    "        pd.DataFrame.equals(original_data_manually_processed, mce_processed_data)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
