--- a/Configuring_VM_with_Python.ipynb
+++ b/Configuring_VM_with_Python.ipynb
@@ -10,7 +10,8 @@
     "1) Start your AWS instance.  \n",
     "2) After your instance starts, under \"INSTANCES\" click on \"Instances\" button to see all your instances.  \n",
     "3) On the far right side (you probably have to scroll to the right side), under the \"Security Group\" tab, click on your instance, which will probably say \"launch-wizard-xx\".  \n",
-    "4) At the bottom of the screen, click \"Inbound\" tab, then \"Edit\", and then \"Add Rule\".  Set Port Range to be 8888 and the Source is 0.0.0.0/0  \n",
+    "4) At the bottom of the screen, click \"Inbound\" tab, then \"Edit\", and then \"Add Rule\".  Set Port Range to be ```8888``` and the Source is ```0.0.0.0/0```  \n",
+    "The point of this is to allow your local computer to connect to the remote VM through Jupyter Notebook.  \n",
     "5) After ssh-ing into your instance, run the following bash commands. You can simply copy and paste the whole thing at once though line by line is probably safer. Or you can save to a bash script and run it from Terminal.\n",
     "\n",
     "```bash\n",
@@ -21,8 +22,7 @@
     "rm Anaconda3-5.1.0-Linux-x86_64.sh # delete the now unnecessary bash script\n",
     "\n",
     "conda update -y conda\n",
-    "conda install -y ipyparallel\n",
-    "conda install -y tqdm # just a cool library to show a progress meter\n",
+    "conda install -y ipyparallel tqdm # tqdm is a cool library to show a progress meter\n",
     "\n",
     "sudo apt-get update && sudo apt-get install -y git htop\n",
     "\n",
@@ -44,7 +44,8 @@
     "## Jupyter Notebook\n",
     "To turn on Jupyter Notebook, just type the following into the Terminal\n",
     "```jupyter notebook --no-browser --ip=0.0.0.0``` \n",
-    "If you want a more secure way of connecting to Jupyter Notebook, you'll have to ask Aaditya for advice! The good thing is that when Python 3's Jupyter Notebook starts up, it prints a password token, which you copy and paste into the browser for Jupyter Notebook. Python 2's Jupyter Notebook does not have this token password. I use ```tmux``` when I use Jupyter Notebook to make sure I don't accidentally stop the notebook server. \n",
+    "Then go to your favorite browser (I use Chrome) and enter in the <VM_ip_address_here>:8888, so it might look like something like this: ```http://34.228.68.249:8888```  \n",
+    "If you want a more secure way of connecting to Jupyter Notebook (like non-public ports), you'll have to ask Aaditya for advice! The good thing is that when Python 3's Jupyter Notebook starts up, it prints a password token, which you copy and paste into the browser for Jupyter Notebook. Python 2's Jupyter Notebook does not have this token password. I use ```tmux``` when I use Jupyter Notebook to make sure I don't accidentally stop the notebook server. \n",
     "\n",
     "\n",
     "#### Caveat\n",
