added documentation for the last and most important example

--- a/test_examples.ipynb
+++ b/test_examples.ipynb
@@ -1,24 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check if pandas is installed\n",
-    "# clean up RAM experiments\n",
-    "# unittest with a mapper/reducer?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -119,9 +101,18 @@
      "text": [
       "100%|██████████| 10/10 [00:10<00:00,  1.01s/it]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 343 ms, sys: 75.4 ms, total: 418 ms\n",
+      "Wall time: 1min\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
     "# create some fake files\n",
@@ -241,9 +232,18 @@
      "text": [
       "100%|██████████| 10/10 [00:10<00:00,  1.01s/it]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 336 ms, sys: 35.5 ms, total: 372 ms\n",
+      "Wall time: 1min\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
     "# create some fake files\n",
@@ -337,9 +337,18 @@
      "text": [
       "100%|██████████| 10/10 [00:10<00:00,  1.01s/it]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 312 ms, sys: 68.6 ms, total: 380 ms\n",
+      "Wall time: 1min\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
     "# create some fake files\n",
@@ -433,9 +442,18 @@
      "text": [
       "100%|██████████| 10/10 [00:13<00:00,  1.31s/it]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 385 ms, sys: 73.1 ms, total: 458 ms\n",
+      "Wall time: 2min 23s\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
     "# create some fake files\n",
@@ -465,7 +483,7 @@
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': exceed_memory_limit,\n",
-    "    'function_kwargs_dict': {} # exceed_memory_limit() takes no additional arguments    \n",
+    "    'function_kwargs_dict': {} # exceed_memory_limit()takes no additional arguments    \n",
     "    }\n",
     "\n",
     "mce3 = MultipleClusterEngine(**mce_args)\n",
@@ -557,7 +575,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-1663f53506f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mmce4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultipleClusterEngine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmce_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mmce4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# I'm expecting an Exception here due to killing all clusters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    315\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_cluster_output_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 317\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    318\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mrun_clusters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    269\u001b[0m                 \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_time_in_seconds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprofile_memory_for_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 271\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_cluster_if_ram_limit_exceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    272\u001b[0m                 \u001b[0mjth_cluster\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_indexes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    273\u001b[0m                 if (not self.async_results_dict[jth_cluster][-1:]\n",
       "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mkill_cluster_if_ram_limit_exceeded\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    216\u001b[0m             self.logger_status.info((\"{}: All clusters have been killed prematurely \"\n\u001b[1;32m    217\u001b[0m                 \"(probably due to exceeding RAM limit)\").format(datetime.now()))\n\u001b[0;32m--> 218\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'All clusters have been killed prematurely'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcheck_if_function_in_cluster_failed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -566,6 +584,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
     "# create some fake files\n",
@@ -666,8 +685,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27.6 s, sys: 200 ms, total: 27.8 s\n",
-      "Wall time: 27.9 s\n"
+      "CPU times: user 27.1 s, sys: 140 ms, total: 27.3 s\n",
+      "Wall time: 27.4 s\n"
      ]
     }
    ],
@@ -738,15 +757,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:22<00:00,  8.23s/it]\n"
+      "100%|██████████| 10/10 [01:28<00:00,  8.83s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 533 ms, sys: 64.5 ms, total: 598 ms\n",
-      "Wall time: 2min 37s\n"
+      "CPU times: user 536 ms, sys: 65 ms, total: 601 ms\n",
+      "Wall time: 2min 36s\n"
      ]
     }
    ],
@@ -773,6 +792,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             2: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>]})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce5.async_results_dict"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -781,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -790,8 +839,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.2 s, sys: 760 ms, total: 24.9 s\n",
-      "Wall time: 23.6 s\n"
+      "CPU times: user 25 s, sys: 762 ms, total: 25.7 s\n",
+      "Wall time: 24.5 s\n"
      ]
     }
    ],
@@ -820,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -836,11 +885,14 @@
       "MCE results match manual extraction for file: 6.tmp: True\n",
       "MCE results match manual extraction for file: 7.tmp: True\n",
       "MCE results match manual extraction for file: 8.tmp: True\n",
-      "MCE results match manual extraction for file: 9.tmp: True\n"
+      "MCE results match manual extraction for file: 9.tmp: True\n",
+      "CPU times: user 3.89 s, sys: 92.6 ms, total: 3.98 s\n",
+      "Wall time: 3.97 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "for i in range(10):\n",
     "    original_data = pd.read_csv('fake_data/{}.tmp'.format(i), header=None)\n",
     "\n",
@@ -858,6 +910,26 @@
     "\n",
     "    print('MCE results match manual extraction for file: {}.tmp: {}'.format(i,\n",
     "        pd.DataFrame.equals(original_data_manually_processed, mce_processed_data)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explanation of Results Specifically for this Function\n",
+    "__```mce5.cluster_output_dir```__: the final output directory is ```/home/ubuntu/cluster_results/get_user_invoice_total_1``` the first time you run this code. Weird. It should be ```get_user_invoice_total_1```. Must be a small bug. \n",
+    "\n",
+    "__logging__:  \n",
+    "* ```status.log```: Last line: \"Appears that 10 files were successfully processed using 3 surviving clusters in 1.8 minutes\". We sent in 10 files and 10 files were successfully processed. We created 3 clusters and 3 survived to the end. Great!\n",
+    "* ```ram_usage.log```: Every 1 second, RAM usage for each cluster (and the sum to get all clusters) is recorded. RAM never gets very high. \n",
+    "* ```failure.log```: Empty. Perfect! \n",
+    "\n",
+    "__```mce5.async_results_dict```__: basically the history of everything MCE did. For example:\n",
+    "```python\n",
+    "history0 = mce5.async_results_dict[0][-1] # get the history of cluster 0 and the last file sent to it.\n",
+    "history1 = mce5.async_results_dict[2][-1] # get the history of cluster 2 and the last file sent to it.\n",
+    "print(history0.elapsed, history1.elapsed) # prints 17.952412 30.098238. This makes sense because cluster 0 had 4 CPUs and cluster 2 had 2 clusters. More clusters means faster processing times.  \n",
+    "```"
    ]
   },
   {
