added more documentation

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "## Area for Future Improvements\n",
     "* Allow queue instead of double-ended queue for input file lists. The motivation is that you actually want the results from some input files before others in a predictable way. This should be actually quite easy.\n",
-    "* Currently, if a cluster is running smoothly, it will never kill itself. Suppose RAM accumulates because of a memory leak, then implement a method to kill and restart the cluster. This should be easy. Personally, I don't know if memory leaks will be a big issue, so I didn't build this feature.\n",
+    "* Currently, if a cluster is running smoothly, it will never kill itself. Suppose RAM accumulates (perhaps in Python 2) because of a memory leak (not truly a memory leak, but rather Python 2 doesn't release all freed up RAM), then implement a method to kill and restart the cluster. This should be easy. Personally, I don't know if memory leaks will be a big issue, so I didn't build this feature.\n",
     "* If a cluster is killed, then perhaps in the future, turn that cluster back on--basically self-regenertion. This will be quite difficult for lots of reasons. For practical purposes, I do not see this as a feature, as there can be many things that can go wrong. "
    ]
   },
