added default parameters

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -157,28 +157,29 @@
     "\n",
     "class MultipleClusterEngine(object):\n",
     "    def __init__(self, \n",
-    "                 cluster_job_name, \n",
-    "                 n_cpus_list, \n",
-    "                 ram_limit_in_GB,\n",
-    "                 wait_time_in_seconds,\n",
     "                 input_file_names,\n",
     "                 output_parent_dir,\n",
     "                 function_to_process,\n",
-    "                 function_kwargs_dict): # always put function args in a dictionary\n",
+    "                 function_kwargs_dict,\n",
+    "                 cluster_job_name='MCE_job', \n",
+    "                 n_cpus_list=(6, 4, 4), \n",
+    "                 ram_limit_in_GB=20,\n",
+    "                 wait_time_in_seconds=1\n",
+    "                ): # always put function args in a dictionary\n",
     "        reload(logging)\n",
+    "        self.input_file_names = input_file_names\n",
+    "        self.output_parent_dir = output_parent_dir\n",
+    "        self.function_to_process = lambda kwargs: function_to_process(**kwargs)\n",
+    "        self.function_kwargs_dict = function_kwargs_dict\n",
     "        self.cluster_job_name = cluster_job_name\n",
     "        self.n_cpus_list = n_cpus_list\n",
     "        self.ram_limit_in_GB = ram_limit_in_GB\n",
-    "        self.wait_time_in_seconds = wait_time_in_seconds\n",
-    "        self.output_parent_dir = output_parent_dir\n",
-    "        self.input_file_names = input_file_names\n",
-    "        self.function_to_process = lambda kwargs: function_to_process(**kwargs)\n",
-    "        self.function_kwargs_dict = function_kwargs_dict\n",
+    "        self.wait_time_in_seconds = wait_time_in_seconds        \n",
     "        \n",
+    "        assert len(self.input_file_names) > 0, \"Need input files\"\n",
+    "        assert os.path.isdir(self.output_parent_dir), \"Output directory doesn't exist\"\n",
     "        assert cluster_job_name, \"Needs cluster name\"\n",
     "        assert len(n_cpus_list) > 0, \"Needs the number of CPUs per cluster\"\n",
-    "        assert os.path.isdir(self.output_parent_dir), \"Output directory doesn't exist\"\n",
-    "        assert len(self.input_file_names) > 0, \"Need input files\"\n",
     "\n",
     "        # used by engine\n",
     "        self.cluster_dict = {}\n",
